<resources>
    <string name="app_name">AndroidMyUI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_ui2">Main UI Activity </string>




    <!-- debut string pour android-process-button  -->
    <string name="dummy_email">jondoe@gmail.com</string>
    <string name="dummy_password">123456789</string>
    <string name="Sign_in">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="Question">How are you?</string>
    <string name="Send">Send</string>
    <string name="Done">Done</string>
    <string name="Upload">Upload</string>
    <string name="Beautiful_Picture">Beautiful Picture</string>
    <string name="Uploading">Uploading</string>
    <string name="Loading_Complete">Loading Complete, button is disabled</string>
    <string name="title_activity_main__menu">Main_Menu</string>
    <string name="title_activity_android_circlebutton">Android_circlebutton</string>

    <!-- fin string pour android-process-button  -->


    <!-- debut string pour Circular Progress Button  -->

    <!--<string name="Upload">Upload</string>-->
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>

    <array name="sample_list">
        <item>@string/IndeterminateProgressSample</item>
        <item>@string/IntegerProgressSample</item>
        <item>@string/StateChangeSample</item>
        <item>@string/ProgressPaddingSample</item>
        <item>@string/CustomSelectorSample</item>
    </array>
    <string name="title_activity_circular__progress__button">Circular_Progress_Button</string>


    <!-- fin string pour Circular Progress Button  -->
</resources>
